--- a/package.json
+++ b/package.json
@@ -18,8 +18,15 @@
   },
   "homepage": "https://github.com/argiriss/javascript_external_coaching#readme",
   "devDependencies": {
+    "css-loader": "^6.7.1",
+    "node-sass": "^7.0.1",
+    "sass-loader": "^13.0.0",
+    "style-loader": "^3.3.1",
     "webpack": "^5.72.1",
     "webpack-cli": "^4.9.2",
     "webpack-dev-server": "^4.9.0"
+  },
+  "dependencies": {
+    "babel-loader": "^8.2.5"
   }
 }
