--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "webpack-dev-server": "^4.9.0"
   },
   "dependencies": {
+    "@babel/core": "^7.18.0",
     "babel-loader": "^8.2.5"
   }
 }
